FIND_PACKAGE(
	Boost 1.44.0 REQUIRED COMPONENTS
	test_exec_monitor
	thread
)

MACRO(
	ADD_STATECHART_TEST
	FILEPATH
)
	GET_FILENAME_COMPONENT(
		TEST_NAME	
		"${FILEPATH}"
		NAME_WE
	)

	ADD_EXECUTABLE (${TEST_NAME} ${FILEPATH})

	TARGET_LINK_LIBRARIES (
		${TEST_NAME}
		${Boost_TEST_EXEC_MONITOR_LIBRARY}
	)

	ADD_TEST(
		NAME
		${TEST_NAME}
		COMMAND
		${TEST_NAME}
	)
ENDMACRO()

FILE(
	GLOB
	TESTFILES
	*.cpp
)

FOREACH(
	CURTEST
	${TESTFILES}
)
	ADD_STATECHART_TEST(
		${CURTEST}
	)
ENDFOREACH()

TARGET_LINK_LIBRARIES(
	FifoSchedulerTest
	${Boost_THREAD_LIBRARY}
)
